<?xml version="1.0"?>
<!--
  Copyright (C) 2018-2019 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->
<package>
    <name>carma_base</name>
    <version>2.8.4</version>

    <description>
        A metapackage to install the dependencies for CARMA
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="carma@todo.todo">carma</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>bondcpp</build_depend>
    <build_depend>diagnostic_updater</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>genjava</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>rosjava_messages</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend version_gte="0.5.16">tf2_geometry_msgs</build_depend>
    <build_depend>boost</build_depend>
    <build_depend>class_loader</build_depend>
    <build_depend>linux-kernel-headers</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>socketcan_interface</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>image_common</build_depend>
    <build_depend>image_geometry</build_depend>
    <run_depend>bondcpp</run_depend>
    <run_depend>diagnostic_updater</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>socketcan_bridge</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
    <run_depend>tf2_msgs</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2</run_depend>
    <test_depend>roslint</test_depend>
    <test_depend>rosunit</test_depend>
</package>