<?xml version="1.0" ?>
<!--
Copyright 2023 Leidos

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package format="3">
  <name>carma_cooperative_perception</name>
  <version>0.1.0</version>
  <description>The CARMA Platform cooperative perception package</description>

  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_auto</build_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>carma_cooperative_perception_interfaces</build_depend>
  <build_depend>carma_perception_msgs</build_depend>
  <build_depend>carma_ros2_utils</build_depend>
  <build_depend>j2735_v2x_msgs</build_depend>
  <build_depend>j3224_v2x_msgs</build_depend>
  <build_depend>carma_v2x_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_extension</depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>multiple_object_tracking</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>carma_launch_testing</test_depend>
  <test_depend>carma_message_utilities</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclcpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
