<?xml version="1.0"?>
<package format="2">
  <name>carma_ndt_matching</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache License 2.0</license>
  <author>Michael McConnell</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>ndt_cpu</depend>
  <depend>carma_utils</depend>
  <depend>cav_msgs</depend>
  <depend>roscpp</depend>
  <depend>motion_predict</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
