<?xml version="1.0"?>

<!--
  Copyright (C) 2021 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->

<package format="3">
  <name>carma_record</name>
  <version>0.0.1</version>
  <description>This package encapsulates the rosbag record function to exclude specific topics based on the desired vehicle configuration</description>

  <maintainer email="carma@todo.todo">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>carma_utils</depend>
  <build_depend>carma_cmake_common</build_depend>

</package>
