<?xml version="1.0"?>
<package format = "3">
  <name>carma_utils</name>
  <version>1.3.0</version>
  <description>
    The carma_utils package provides helpful classes for use with the CARMA Platform.
  </description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>
  <author email="carma@todo.todo">carma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <depend>roscpp</depend>
  <depend>cav_msgs</depend>
  <depend>cav_srvs</depend>
  <depend>message_filters</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
